--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
     "description": "Lightweight Text editor with Syntax highlighting",
     "module": "index.ts",
     "main": "dist/main.js",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "scripts": {
         "build": "tsc",
         "start": "npm run build && electron .",
         "startfile": "npm run build && electron . /Users/jan/Documents/testfiles/test.js",
-        "dist:win": "electron-builder --win",
-        "dist:linux": "electron-builder --linux",
+        "dist": "npm run build && electron-builder --win --linux --mac",
+        "dist:win": "npm run build && electron-builder --win",
+        "dist:linux": "npm run build && electron-builder --linux",
         "dist:mac": "npm run build && electron-builder --mac --x64 --arm64"
     },
     "author": {
