--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "description": "Lightweight Text editor with Syntax highlighting",
   "module": "index.ts",
   "main": "dist/main.js",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "scripts": {
     "build": "tsc",
     "start": "npm run build && electron .",
     "startfile": "npm run build && electron . /Users/jan/Documents/testfiles/test.js",
+    "startfilewin": "npm run build && electron . C:\\\\Users\\\\janst\\\\Documents\\\\testfiles\\\\test.js",
     "dist": "npm run build && electron-builder",
     "dist:win": "npm run build && electron-builder --win",
     "dist:linux": "npm run build && electron-builder --linux",
